deployment/kustomize/base/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummyapp-deployment
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: dummyapp
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    spec:
      containers:
      - name: dummyapp
        image: 'docker.io/fahadahammed/dummyapp:v1.0.4'
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 7551
          name: http-port
        livenessProbe:
          httpGet:
            path: /probe/liveness
            port: 7551
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
           httpGet:
             path: /probe/readiness
             port: 7551
           initialDelaySeconds: 3
           periodSeconds: 3
        startupProbe:
          httpGet:
            path: /probe/startup
            port: 7551
          timeoutSeconds: 60
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dummyapp-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: http-port
    protocol: TCP
    targetPort: 7551
  selector:
    app.kubernetes.io/name: dummyapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummyapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.org/server-snippets: "gzip on;"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - 'dummyapp.fahadahammed.com'
    secretName: 'dummyapp.fahadahammed.com'
  rules:
  - host: 'dummyapp.fahadahammed.com'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummyapp-service
            port:
              number: 80
